feat(scoreboard): rewrite scoreboard system on PacketEvents
- Replace FastBoard/NMS-based scoreboard with a PacketEvents-only pipeline
  (protocol/, render/, instance/, core/, listener/, api/ packages)
- Fix duplicate team names caused by objective-name truncation collisions
- Fix score updates being registered against the team name instead of the
  real objective
- Wire ScoreboardAdapter/SystemDetector into ReloadManagerV2 and register
  scoreboard serializers in ConfigSchemaRegistry
- Misc unrelated fixes: database cache/redis, hologram renderer, loot
  picker/editor, sequence executor, loader plugin